--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
 services:
-  hello-world:
+  main:
     build: .
     ports:
     - "8080:8080"
@@ -12,11 +12,11 @@ services:
     privileged: true
     pid: "host"
     depends_on:
-      - hello-world
+      - main
     environment:
       - OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
-      - OTEL_GO_AUTO_TARGET_EXE=/hello-world
-      - OTEL_SERVICE_NAME=hello-world
+      - OTEL_GO_AUTO_TARGET_EXE=/main
+      - OTEL_SERVICE_NAME=main
       - OTEL_PROPAGATORS=tracecontext,baggage
     volumes:
       # - app:/cmd
