--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,3 +17,8 @@ jobs:
         -coverprofile=coverage.txt
         -covermode atomic
         ./...
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v4.0.1
+      with:
+        files: ./coverage.txt
+        token: ${{ secrets.CODECOV_TOKEN }}
