--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,7 +16,7 @@ jobs:
         -race
         -coverprofile=coverage.txt
         -covermode atomic
-        ./...
+        ./front ./server
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v4.0.1
       with:
