--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,16 +1,11 @@
-FROM golang:1.23 as builder
-
+FROM golang:1.23 AS builder
 WORKDIR /app
+COPY go.mod go.sum ./
+RUN go mod download
+COPY *.go ./
 
-ADD . /app
-
-RUN go build -o bin/server server/main.go
-
-# Use alpine rather than scratch so can attach for debugging as needed
-FROM alpine:latest
-
-COPY --from=builder /app/bin/server .
-
-EXPOSE 8080
-
-CMD ["./server"]
+RUN CGO_ENABLED=0 GOOS=linux go build -o main .
+FROM alpine:3.20
+COPY --from=builder /app /
+EXPOSE 50051
+CMD ["/main"]
