--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,17 +7,24 @@ jobs:
   tests:
     runs-on: ubuntu-22.04
     steps:
-    - uses: actions/setup-go@v5
-    - uses: actions/checkout@v4
+		- name: "Check out code"
+      uses: actions/checkout@v4
       with:
         fetch-depth: 1
+
+		- name: "Set up Go"
+      uses: actions/setup-go@v5
+			with:
+			  go-version '>=1.23'
+
     - name: "Run tests"
       run: go test
         -race
         -coverprofile=coverage.txt
         -covermode atomic
         ./front ./server
-    - name: Upload coverage reports to Codecov
+
+    - name: "Upload coverage reports to Codecov"
       uses: codecov/codecov-action@v4.0.1
       with:
         files: ./coverage.txt
