feat: add sql creation file

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,7 @@ jobs:
         -race
         -coverprofile=coverage.txt
         -covermode atomic
-        ./front ./server
+        ./server
 
     - name: "Upload coverage reports to Codecov"
       uses: codecov/codecov-action@v4.0.1
