--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,9 @@
 name: "Docker build and push to GHCR"
 
 on:
-  push
-
-env:
-  TF_VAR_username: "arljohnston"
-  TF_VAR_password: ${{ secrets.GHCR_PAT }}
+  push:
+    paths-ignore:
+      - '**/README.md'
 
 jobs:
   build_and_publish:
@@ -14,8 +12,15 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 1
-      - name: "Build and Push"
+
+      - name: "Build and Push Front"
         run: |
           docker login --username ARLJohnston --password ${{ secrets.GHCR_PAT }} ghcr.io
-          docker build . --tag ghcr.io/arljohnston/go-http:latest
-          docker push ghcr.io/arljohnston/go-http:latest
+          docker build ./front/ --tag ghcr.io/arljohnston/go-microservice-front:latest
+          docker push ghcr.io/arljohnston/go-microservice-front:latest
+
+      - name: "Build and Push Server"
+        run: |
+          docker login --username ARLJohnston --password ${{ secrets.GHCR_PAT }} ghcr.io
+          docker build ./server/ --tag ghcr.io/arljohnston/go-microservice-server:latest
+          docker push ghcr.io/arljohnston/go-microservice-server:latest
