--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,12 +1,12 @@
 FROM golang:1.23 AS builder
+
 WORKDIR /app
-COPY go.mod go.sum ./
-RUN go mod download
 COPY . /app
-RUN CGO_ENABLED=0 GOOS=linux go build -o /entrypoint
+RUN go install github.com/a-h/templ/cmd/templ@latest
+RUN templ generate
+RUN CGO_ENABLED=0 GOOS=linux go build -o front .
 
 FROM alpine:3.20
-WORKDIR /
-COPY --from=builder /entrypoint /entrypoint
+COPY --from=builder /app /
 EXPOSE 3000
-ENTRYPOINT ["/entrypoint"]
+ENTRYPOINT ["./front"]
