--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,12 +1,9 @@
-FROM golang:1.23 AS builder
+FROM golang:1.23
 
 WORKDIR /app
 COPY . /app
 RUN go install github.com/a-h/templ/cmd/templ@latest
 RUN templ generate
-RUN CGO_ENABLED=0 GOOS=linux go build -o front .
-
-FROM alpine:3.20
-COPY --from=builder /app /
+RUN CGO_ENABLED=0 GOOS=linux go build -o main .
 EXPOSE 3000
-ENTRYPOINT ["./front"]
+ENTRYPOINT ["./main"]
