--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,9 +1,11 @@
-FROM golang:1.23
-
+FROM golang:1.23 AS builder
 WORKDIR /app
 COPY . /app
 RUN go install github.com/a-h/templ/cmd/templ@latest
 RUN templ generate
-RUN CGO_ENABLED=0 GOOS=linux go build -o main .
+RUN CGO_ENABLED=0 GOOS=linux go build -o front .
+
+FROM alpine:3.20
+COPY --from=builder /app /
 EXPOSE 3000
-ENTRYPOINT ["./main"]
+ENTRYPOINT ["./front"]
