fix: tag dockerfiles for ghcr

--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -6,6 +6,7 @@ RUN templ generate
 RUN CGO_ENABLED=0 GOOS=linux go build -o front .
 
 FROM alpine:3.20
+LABEL org.opencontainers.image.source=https://github.com/arljohnston/go-microservice-front
 COPY --from=builder /app /
 EXPOSE 3000
 ENTRYPOINT ["./front"]
