--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,4 +6,4 @@ scrape_configs:
   - job_name: "prometheus"
     metrics_path: /metrics
     static_configs:
-      - targets: ['gohttp:8080','node_exporter:9100']
+      - targets: ['front-end:3000','client:50051','node_exporter:9100']
