--- a/deployments/client/templates/service.yaml
+++ b/deployments/client/templates/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: front-svc
-  namespace: front-end
+  name: db-client-svc
+  namespace: db-client
 spec:
   type: ClusterIP
   selector:
-    role: front
+    role: db-client
   ports:
-  - port: 3000
-    targetPort: 3000
+  - port: 50051
+    targetPort: 50051
