--- a/deployments/front/templates/service.yaml
+++ b/deployments/front/templates/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: db-client-svc
-  namespace: db-client
+  name: front-end-svc
+  namespace: front-end-ns
 spec:
   type: ClusterIP
   selector:
-    role: db-client
+    role: front-end-ns
   ports:
   - port: 50051
     targetPort: 50051
