--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,9 +1,11 @@
-FROM golang:1.23 AS builder
+FROM --platform=$BUILDPLATFORM golang:1.23 AS builder
+ARG TARGETOS
+ARG TARGETARCH
 WORKDIR /app
 COPY . /app
 RUN go install github.com/a-h/templ/cmd/templ@latest
 RUN templ generate
-RUN CGO_ENABLED=0 GOOS=linux go build -o front .
+RUN CGO_ENABLED=0 GOOS=${TARGETOS} GOARCH=${TARGETARCH} go build -o front .
 
 FROM alpine:3.20
 LABEL org.opencontainers.image.source=https://github.com/arljohnston/go-microservice-front
