--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,18 +11,28 @@ jobs:
   build_and_publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: "Set up Docker Buildx"
+        uses: docker/setup-buildx-action@v3
+
+      - name: "Login to GitHub Container Registry"
+        uses: docker/login-action@v3
         with:
-          fetch-depth: 1
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_PAT }}
 
-      - name: "Build and Push Front"
-        run: |
-          docker login --username ARLJohnston --password ${{ secrets.GHCR_PAT }} ghcr.io
-          docker build --platform linux/amd64,linux/aarch64 ./front/ --tag ghcr.io/arljohnston/go-microservice-front:latest
-          docker push ghcr.io/arljohnston/go-microservice-front:latest
+      - name: "Build and push Front end"
+        uses: docker/build-push-action@v5
+        with:
+          context: ./front
+          platforms: linux/amd64,linux/aarch64
+          push: true
+          tags: user/app:latest
 
-      - name: "Build and Push Server"
-        run: |
-          docker login --username ARLJohnston --password ${{ secrets.GHCR_PAT }} ghcr.io
-          docker build --platform linux/amd64,linux/aarch64 ./server/ --tag ghcr.io/arljohnston/go-microservice-server:latest
-          docker push ghcr.io/arljohnston/go-microservice-server:latest
+      - name: "Build and push Server"
+        uses: docker/build-push-action@v5
+        with:
+          context: ./server
+          platforms: linux/amd64,linux/aarch64
+          push: true
+          tags: user/app:latest
