--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -24,7 +24,7 @@ jobs:
       - name: "Build and push Front end"
         uses: docker/build-push-action@v5
         with:
-          context: ./front
+          context: front/
           platforms: linux/amd64,linux/aarch64
           push: true
           tags: user/app:latest
@@ -32,7 +32,7 @@ jobs:
       - name: "Build and push Server"
         uses: docker/build-push-action@v5
         with:
-          context: ./server
+          context: server/
           platforms: linux/amd64,linux/aarch64
           push: true
           tags: user/app:latest
