--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,7 @@ jobs:
           context: front/
           platforms: linux/amd64,linux/aarch64
           push: true
-          tags: user/app:latest
+          tags: ghcr.io/arljohnston/go-microservice-front:latest
 
       - name: "Build and push Server"
         uses: docker/build-push-action@v5
@@ -39,4 +39,4 @@ jobs:
           context: server/
           platforms: linux/amd64,linux/aarch64
           push: true
-          tags: user/app:latest
+          tags: ghcr.io/arljohnston/go-microservice-server:latest
