--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: front/
-          platforms: linux/amd64,linux/aarch64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/arljohnston/go-microservice-front:latest
 
@@ -37,6 +37,6 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: server/
-          platforms: linux/amd64,linux/aarch64
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ghcr.io/arljohnston/go-microservice-server:latest
