--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -53,16 +53,16 @@ services:
     networks:
       - back-end
 
-  # prometheus:
-  #   image: prom/prometheus:latest
-  #   container_name: prometheus
-  #   volumes:
-  #     - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
-  #   ports:
-  #     - "9090:9090"
-  #   networks:
-  #     - front-end
-  #     - back-end
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - front-end
+      - back-end
 
   node_exporter:
     image: quay.io/prometheus/node-exporter:latest
@@ -79,18 +79,18 @@ services:
       - front-end
       - back-end
 
-  # grafana:
-  #   image: grafana/grafana-oss:latest
-  #   container_name: grafana
-  #   ports:
-  #     - "3001:3000"
-  #   environment:
-  #     - GF_SECURITY_ADMIN_PASSWORD=admin
-  #   networks:
-  #     - front-end
-  #     - back-end
-  #   depends_on:
-  #     - prometheus
+  grafana:
+    image: grafana/grafana-oss:latest
+    container_name: grafana
+    ports:
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    networks:
+      - front-end
+      - back-end
+    depends_on:
+      - prometheus
 
 networks:
   front-end:
