--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,11 +22,22 @@ jobs:
       working-directory: ./front
       run: templ generate
 
-    - name: "Run tests"
-      run: go test -race -coverprofile=coverage.txt -covermode atomic ./server ./front
+    - name: "Run front end tests"
+      run: go test -race -coverprofile=front.txt -covermode atomic ./front
 
     - name: "Upload coverage reports to Codecov"
-      uses: codecov/codecov-action@v4.0.1
+      uses: codecov/codecov-action@v5
       with:
-        files: ./coverage.txt
+        files: ./front.txt
+        flags: front-end
+        token: ${{ secrets.CODECOV_TOKEN }}
+
+    - name: "Run server tests"
+      run: go test -race -coverprofile=server.txt -covermode atomic ./server
+
+    - name: "Upload coverage reports to Codecov"
+      uses: codecov/codecov-action@v5
+      with:
+        files: ./server.txt
+        flags: server
         token: ${{ secrets.CODECOV_TOKEN }}
