--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -77,6 +77,8 @@ services:
     networks:
       - front-end
       - back-end
+    depends_on:
+      - prometheus
 
   grafana:
     image: grafana/grafana-oss:latest
