--- a/deployments/prometheus/prometheus.yml
+++ b/deployments/prometheus/prometheus.yml
@@ -3,7 +3,12 @@ global:
   evaluation_interval: 15s
 
 scrape_configs:
+  - job_name: "node_exporter"
+    metrics_path: /metrics
+    static_configs:
+      - targets: [ "localhost:9002" ]
+
   - job_name: "prometheus"
     metrics_path: /metrics
     static_configs:
-      - targets: ['front-end:3000','client:2121','node_exporter:9100']
+      - targets: [ "localhost:8080" ]
