add Kubernetes manifests using Kompose

--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   front-end:
     container_name: front-end
-    build: ../front
+    image: ghcr.io/arljohnston/go-microservice-front:latest
     ports:
       - "8000:3000"
     environment:
@@ -13,7 +13,7 @@ services:
 
   client:
     container_name: client
-    build: ../server
+    image: ghcr.io/arljohnston/go-microservice-server:latest
     ports:
       - "50051:50051"
       - "2121:2121"
