--- a/.gitignore
+++ b/.gitignore
@@ -14,25 +14,16 @@
 !go.*
 !*.sql
 !*.templ
-!*.js
 !*.png
-
+!*.proto
 !README.md
 !LICENSE
-
 !*.nix
 !flake.lock
 !Dockerfile
 !main.tf
-!deployments/*.yml
-!docker-compose.yml
-
-!.github/workflows/*.yml
-
-!deployments/prometheus/*.yml
-!prometheus/*.yml
-!proto/*.proto
-
+!*.yml
+!*.yaml
 !*.py
 !requirements.txt
 
