--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,6 +15,10 @@ jobs:
 
       - name: "Set up Docker Buildx"
         uses: docker/setup-buildx-action@v3
+        
+      - name: "Get current date"
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
       - name: "Login to GitHub Container Registry"
         uses: docker/login-action@v3
@@ -29,7 +33,7 @@ jobs:
           context: front/
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/arljohnston/go-microservice-front:latest
+          tags: ghcr.io/arljohnston/go-microservice-front:latest, ghcr.io/arljohnston/go-microservice-front:${{ steps.date.outputs.date }}
 
       - name: "Build and push Server"
         uses: docker/build-push-action@v5
@@ -37,4 +41,4 @@ jobs:
           context: server/
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/arljohnston/go-microservice-server:latest
+          tags: ghcr.io/arljohnston/go-microservice-server:latest,ghcr.io/arljohnston/go-microservice-server:${{ steps.date.outputs.date }}
